# minicdcl

./: CMakeLists.txt  COPYRIGHT  README
core/: Dimacs.h  Main.cc  Makefile  Solver.cc  Solver.h  SolverTypes.h
mtl/: Alg.h  Alloc.h  BoundedQueue.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  XAlloc.h
utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
